<resources>
    <string name="app_name">RentHouse</string>
    <string name="address">地址</string>
    <string name="manage_personal_info">个人信息登记</string>
    <string name="manage_own_house">出租的房子</string>
    <string name="manage_rent_house">租的房子</string>
    <string name="manage_post">管理帖子</string>
    <string name="login">登陆</string>
    <string name="logout">退出</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">姓名</string>
    <string name="password">密码</string>
    <string name="loginAndRegister">登陆(并注册)</string>
    <string name="id">身份证号</string>
    <string name="title_bbs">论坛</string>
    <string name="title_personal">我</string>
    <string name="title_house">主页</string>
    <string name="house_type">户型</string>
    <string name="最大居住人数" />
    <string name="house_max">最大居住人数</string>
    <string name="rent">租金</string>
    <string name="rent_month">租凭月数</string>
    <string name="total_rent">总计</string>
    <string name="place_order">确认</string>
    <string name="order_confirm">确认订单</string>

    <!-- Order -->
    <string name="order_house_address">地址：%1$s</string>
    <string name="order_house_type">户型：%1$s</string>
    <string name="order_house_capacity">居住人数：%1$s</string>
    <string name="order_house_rent">月租金：%1$s</string>
    <string name="order_usr_phone">电话：%1$s</string>
    <string name="order_usr_name">姓名：%1$s</string>
    <string name="order_total_rent">%1$s元</string>
    <string name="order_history">历史订单</string>
    <!-- Reply -->
    <string name="reply">回复</string>

    <!-- Register-->
    <string name="register_update">登记修改</string>
    <string name="register_identity_no">身份证号</string>
    <string name="register_name">姓名</string>
    <string name="register_usr_address">地址</string>
    <string name="register_gender">性别</string>
    <string name="register_phone">电话号码</string>
    <string name="register_password">密码</string>
    <string name="male">男</string>
    <string name="female">女</string>


    <!-- warn -->
    <string name="warn_login_first">请先登陆</string>
    <string name="warn_id_password_not_null">身份证号和密码不能为空</string>
    <string name="warn_input_error">请检查输入</string>

    <!--register manage_house-->
    <string name="register_house">登记房屋</string>
    <string name="register_house_success">登记房屋成功</string>
    <string name="register_house_confirm">确认登记</string>
    <string name="register_house_address">房屋地址</string>
    <string name="register_house_type">房屋户型</string>
    <string name="register_house_rent">房屋月租</string>
    <string name="register_house_capacity">可居住人数</string>
    <string name="register_house_rent_hint">请输入整数</string>
    <string name="my_message">我的消息</string>
    <string name="my_reserve">我的预约</string>
    <string name="own_house">我的房屋</string>
    <string name="house_update">更新房屋信息</string>
    <string name="status">上架</string>
    <string name="confirm">确认</string>
    <string name="delete">删除</string>

    <string name="notify_success">成功</string>

    <string name="order_history_total">总计：%1$s元</string>
    <string name="order_history_income">收入：%1$s元</string>
    <string name="order_history_outcome">支出：%1$s元</string>
    <string name="order_history_month">月数：%1$s</string>
    <string name="order_history_id">订单编号：%1$s</string>
    <string name="order_history_datetime">订单日期：%1$s</string>

    <string name="order_history_type">户型：%1$s</string>
    <string name="order_history_rent">月租金：%1$s</string>
    <string name="order_history_capacity">居住人数：%1$s</string>
    <string name="order_history_owner_name">房主姓名：%1$s</string>
    <string name="order_history_owner_phone">房主电话：%1$s</string>
    <string name="order_history_renter_name">租客姓名：%1$s</string>
    <string name="order_history_renter_phone">租客电话：%1$s</string>
    <string name="order_history_detail">订单详情</string>

    <string name="reserve_title">预约</string>
    <string name="reserve_owner_name">房主：%1$s</string>
    <string name="reserve_phone">电话：%1$s</string>
    <string name="reserve_renter_name">租客：%1$s</string>
    <string name="reserve_address">房屋地址：%1$s</string>
    <string name="post_detail">帖子详情</string>

</resources>
