<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.northernboy.renthouse.ui.home.HomeFragment"
        android:label="@string/title_house"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_orderFragment"
            app:destination="@id/navigation_order" />
    </fragment>

    <fragment
        android:id="@+id/navigation_bbs"
        android:name="com.northernboy.renthouse.ui.bbs.BbsFragment"
        android:label="@string/title_bbs"
        tools:layout="@layout/fragment_bbs" >
        <action
            android:id="@+id/action_navigation_bbs_to_replyFragment"
            app:destination="@id/navigation_reply" />
    </fragment>

    <fragment
        android:id="@+id/navigation_personal"
        android:name="com.northernboy.renthouse.ui.personal.PersonalFragment"
        android:label="@string/title_personal"
        tools:layout="@layout/fragment_personal">
        <action
            android:id="@+id/action_navigation_notifications_to_loginFragment"
            app:destination="@id/navigation_login" />
        <action
            android:id="@+id/action_navigation_personal_to_registerFragment"
            app:destination="@id/navigation_register" />
        <action
            android:id="@+id/action_navigation_personal_to_registerHouseFragment"
            app:destination="@id/navigation_register_house" />
        <action
            android:id="@+id/action_navigation_personal_to_manageHouseFragment"
            app:destination="@id/navigation_manage_own_house" />
        <action
            android:id="@+id/action_navigation_personal_to_orderHistoryFragment"
            app:destination="@id/navigation_order_history" />
    </fragment>
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.northernboy.renthouse.ui.LoginFragment"
        android:label="@string/login" />
    <fragment
        android:id="@+id/navigation_reply"
        android:name="com.northernboy.renthouse.ui.bbs.ReplyFragment"
        android:label="@string/manage_post">
        <argument
            android:name="PostView"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/navigation_order"
        android:name="com.northernboy.renthouse.ui.home.OrderFragment"
        android:label="@string/order_confirm" >
        <argument
            android:name="houseView"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/navigation_register"
        android:name="com.northernboy.renthouse.ui.register.RegisterFragment"
        android:label="@string/register_update" />
    <fragment
        android:id="@+id/navigation_register_house"
        android:name="com.northernboy.renthouse.ui.registerHouse.RegisterHouseFragment"
        android:label="@string/register_house" />
    <fragment
        android:id="@+id/navigation_manage_own_house"
        android:name="com.northernboy.renthouse.ui.manageHouse.ManageHouseFragment"
        android:label="@string/own_house" >
        <action
            android:id="@+id/action_navigation_manage_own_house_to_mangeHouseUpdateFragment"
            app:destination="@id/navigation_house_update" />
    </fragment>
    <fragment
        android:id="@+id/navigation_house_update"
        android:name="com.northernboy.renthouse.ui.manageHouse.ManageHouseUpdateFragment"
        android:label="@string/house_update">
        <argument
            android:name="houseView"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/navigation_order_history"
        android:name="com.northernboy.renthouse.ui.orderHistory.OrderHistoryFragment"
        android:label="@string/order_history" >
        <action
            android:id="@+id/action_navigation_order_history_to_orderHistoryDetail"
            app:destination="@id/navigation_order_history_detail" />
    </fragment>
    <fragment
        android:id="@+id/navigation_order_history_detail"
        android:name="com.northernboy.renthouse.ui.orderHistory.OrderHistoryDetailFragment"
        android:label="@string/order_history_detail">
        <argument
            android:name="OrderView"
            app:argType="string" />
    </fragment>
</navigation>
