<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="item"
            type="com.northernboy.renthouse.view.HouseView" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <com.northernboy.renthouse.custom.XTextView
            android:id="@+id/manage_house_update_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:XTextContent="@{item.houseAddress}"
            app:XTextContentEditable="true"
            app:XTextTitle="@string/address" />

        <com.northernboy.renthouse.custom.XTextView
            android:id="@+id/manage_house_update_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:XTextContent="@{item.houseType}"
            app:XTextContentEditable="true"
            app:XTextTitle="@string/house_type" >

        </com.northernboy.renthouse.custom.XTextView>

        <com.northernboy.renthouse.custom.XTextView
            android:id="@+id/manage_house_update_rent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:XTextContent="@{item.houseRent.toString()}"
            app:XTextContentEditable="true"
            app:XTextTitle="@string/register_house_rent" />

        <com.northernboy.renthouse.custom.XTextView
            android:id="@+id/manage_house_update_capacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:XTextShowContent="false"
            app:XTextShowSpinner="true"
            app:XTextSpinnerEntry="@array/month_number"
            app:XTextSpinnerInitValue="@{item.houseCapacity}"
            app:XTextTitle="@string/register_house_capacity" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/status"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/manage_house_update_switch_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:checked="@{item.houseStatus == 1}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/manage_house_update_delete"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:text="@string/delete" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/manage_house_update_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:text="@string/confirm" />

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>